Changed 'new Integer(name_index)' into 'Integer.valueOf(name_index)'